--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strapi-plugin-import-export-content",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "This is a plugin for import and export content of collection types.",
   "license": "MIT",
   "strapi": {
@@ -16,6 +16,10 @@
     "csv-string": "^4.0.1",
     "prismjs": "^1.23.0",
     "react-simple-code-editor": "^0.11.0"
+  },
+  "peerDependencies": {
+    "strapi-utils": "^3.6.8",
+    "request": "^2.87.0"
   },
   "author": "Edison Peñuela <edisonpe961206@hotmail.com>",
   "maintainers": [
